fix overflow bug

--- a/app/workouts/Workouts.module.scss
+++ b/app/workouts/Workouts.module.scss
@@ -37,7 +37,6 @@
                 // flex: 1;
                 max-width: 30rem;
                 
-                position: relative;
                 h2 {
                     font-size: 1.2rem;
                     margin-inline-end: 1rem;
